--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "install": "^0.13.0",
-    "joi": "^17.11.0"
+    "joi": "^17.11.0",
+    "logform": "^2.6.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
